Update docs for commit 4d26ba4

--- a/_modules/rtmidi/midiconstants.html
+++ b/_modules/rtmidi/midiconstants.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 
-<html lang="en">
+<html lang="en" data-content_root="../../">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>rtmidi.midiconstants &#8212; python-rtmidi 1.5.5 documentation</title>
-    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css" />
-    <link rel="stylesheet" type="text/css" href="../../_static/classic.css" />
+    <title>rtmidi.midiconstants &#8212; python-rtmidi 1.5.6 documentation</title>
+    <link rel="stylesheet" type="text/css" href="../../_static/pygments.css?v=fa44fd50" />
+    <link rel="stylesheet" type="text/css" href="../../_static/classic.css?v=514cf933" />
     
-    <script data-url_root="../../" id="documentation_options" src="../../_static/documentation_options.js"></script>
-    <script src="../../_static/doctools.js"></script>
-    <script src="../../_static/sphinx_highlight.js"></script>
+    <script src="../../_static/documentation_options.js?v=8f564690"></script>
+    <script src="../../_static/doctools.js?v=888ff710"></script>
+    <script src="../../_static/sphinx_highlight.js?v=dc90522c"></script>
     
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" /> 
@@ -24,7 +24,7 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.5.5 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.5.6 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" accesskey="U">Module code</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">rtmidi.midiconstants</a></li> 
       </ul>
@@ -282,9 +282,12 @@
 <span class="c1">###################################################</span>
 <span class="c1"># Helper functions</span>
 
-<div class="viewcode-block" id="is_status"><a class="viewcode-back" href="../../rtmidi.html#rtmidi.midiconstants.is_status">[docs]</a><span class="k">def</span> <span class="nf">is_status</span><span class="p">(</span><span class="n">byte</span><span class="p">):</span>
+<div class="viewcode-block" id="is_status">
+<a class="viewcode-back" href="../../rtmidi.html#rtmidi.midiconstants.is_status">[docs]</a>
+<span class="k">def</span> <span class="nf">is_status</span><span class="p">(</span><span class="n">byte</span><span class="p">):</span>
 <span class="w">    </span><span class="sd">&quot;&quot;&quot;Return True if the given byte is a MIDI status byte, False otherwise.&quot;&quot;&quot;</span>
     <span class="k">return</span> <span class="p">(</span><span class="n">byte</span> <span class="o">&amp;</span> <span class="mh">0x80</span><span class="p">)</span> <span class="o">==</span> <span class="mh">0x80</span>  <span class="c1"># 1000 0000</span></div>
+
 </pre></div>
 
             <div class="clearer"></div>
@@ -316,14 +319,14 @@
         <li class="right" >
           <a href="../../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.5.5 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="../../index.html">python-rtmidi 1.5.6 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="../index.html" >Module code</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">rtmidi.midiconstants</a></li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &#169; Copyright 2012 - 2023, Christopher Arndt.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.0.1.
+    &#169; Copyright 2012 - 2023, Christopher Arndt.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.5.
     </div>
   </body>
 </html>
