Update docs for commit da2d704

--- a/rtmidi.html
+++ b/rtmidi.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>rtmidi package &#8212; python-rtmidi 1.5.6 documentation</title>
+    <title>rtmidi package &#8212; python-rtmidi 1.5.7 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=fa44fd50" />
     <link rel="stylesheet" type="text/css" href="_static/classic.css?v=514cf933" />
     
-    <script src="_static/documentation_options.js?v=8f564690"></script>
+    <script src="_static/documentation_options.js?v=2b2ec289"></script>
     <script src="_static/doctools.js?v=888ff710"></script>
     <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
     
@@ -33,7 +33,7 @@
         <li class="right" >
           <a href="modules.html" title="rtmidi"
              accesskey="P">previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.5.6 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.5.7 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" accesskey="U">rtmidi</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">rtmidi package</a></li> 
       </ul>
@@ -953,9 +953,7 @@ must be a start-of-sysex status byte, i.e. 0xF0.</p>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
 <p>with some backend APIs (notably <code class="docutils literal notranslate"><span class="pre">`WINDOWS_MM</span></code>) this function
-blocks until the whole message is sent. While sending the message
-the global interpreter lock is released, so multiple Python threads
-can send messages using <em>different</em> MidiOut instances concurrently.</p>
+blocks until the whole message is sent.</p>
 </div>
 <p>Exceptions:</p>
 <dl class="simple">
@@ -1178,14 +1176,14 @@ port name.</p>
         <li class="right" >
           <a href="modules.html" title="rtmidi"
              >previous</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.5.6 documentation</a> &#187;</li>
+        <li class="nav-item nav-item-0"><a href="index.html">python-rtmidi 1.5.7 documentation</a> &#187;</li>
           <li class="nav-item nav-item-1"><a href="modules.html" >rtmidi</a> &#187;</li>
         <li class="nav-item nav-item-this"><a href="">rtmidi package</a></li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
     &#169; Copyright 2012 - 2023, Christopher Arndt.
-      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.5.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 7.2.6.
     </div>
   </body>
 </html>
